Experimenting with Spring Boot 2.1.0.M2 and JUnit 5.

--- a/product-data-crawler-webapp/src/main/resources/META-INF/resources/frontend/styles/shared-styles.html
+++ b/product-data-crawler-webapp/src/main/resources/META-INF/resources/frontend/styles/shared-styles.html
@@ -1,6 +1,6 @@
 <custom-style>
     <style>
-        #app {
+        .app-view {
             max-width: 1200px;
             margin: 0 auto;
         }
