Improves error handling and visual design.

--- a/product-data-crawler-webapp/src/main/resources/META-INF/resources/frontend/styles/shared-styles.html
+++ b/product-data-crawler-webapp/src/main/resources/META-INF/resources/frontend/styles/shared-styles.html
@@ -4,5 +4,20 @@
             max-width: 1200px;
             margin: 0 auto;
         }
+        .product-item {
+            width: 100%;
+            background-color: #fafafa;
+            border-radius: 5px;
+            padding: 20px;
+        }
+        .product-item h3 {
+            margin-top: 0;
+        }
+        .product-item vaadin-form-layout {
+            width: 100%;
+        }
+        .product-item vaadin-text-field {
+            padding-top: 0;
+        }
     </style>
 </custom-style>
