Allow user to search product by name.

--- a/product-data-crawler-webapp/src/main/resources/META-INF/resources/frontend/styles/shared-styles.html
+++ b/product-data-crawler-webapp/src/main/resources/META-INF/resources/frontend/styles/shared-styles.html
@@ -4,19 +4,22 @@
             max-width: 1200px;
             margin: 0 auto;
         }
-        .product-item {
+        #search-result-container {
             width: 100%;
+        }
+        .search-result-item {
             background-color: #fafafa;
             border-radius: 5px;
             padding: 20px;
+            margin-bottom: 20px;
         }
-        .product-item h3 {
+        .search-result-item h3 {
             margin-top: 0;
         }
-        .product-item vaadin-form-layout {
+        .search-result-item vaadin-form-layout {
             width: 100%;
         }
-        .product-item vaadin-text-field {
+        .search-result-item vaadin-text-field {
             padding-top: 0;
         }
     </style>
